manifests/hub-core-services/kube-sbt-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hub-platform-ops
  labels:
    name: hub-platform-ops
    istio-injection: enabled
